--- a/Lab 3/Lab_1_Preparando_el_ambiente/README.html
+++ b/Lab 3/Lab_1_Preparando_el_ambiente/README.html
@@ -98,7 +98,6 @@
       </li>
       <br>
       <li>
-
         Espere un momento a que el compartimiento termine de crearse. Aparecerá en la lista de compartimientos creados.
         <br>
         <br>
@@ -187,6 +186,13 @@
       </li>
       <br>
       <br>
+      <li>
+        Espera a que la pila cambie de estado de "Accepted" a "" &#128071;
+        <br>
+        <br>
+        <img src="/Lab 3/images/image12.png" alt="image12">
+        <br>
+      </li>
     </ol>
- 
+  </section>
 </body>
